**Dev**

- Create Python package structure