@@ -1,3 +1,4 @@
 **Dev**
 
 - Create Python package structure
+- Create conda environment
